--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "mongoose": "^4.10.4"
+    "mongoose": "^4.10.4",
+    "sb": "^0.2.1",
+    "ws": "^3.0.0"
   }
 }
