--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
   },
   "homepage": "https://github.com/zhufengnodejs/201702nodejs#readme",
   "dependencies": {
+    "async": "^2.4.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "cheerio": "^1.0.0-rc.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "cron": "^1.2.1",
+    "debug": "^2.6.8",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "mongoose": "^4.10.4",
+    "iconv-lite": "^0.4.18",
+    "mongoose": "^4.10.6",
+    "request": "^2.81.0",
     "sb": "^0.2.1",
     "ws": "^3.0.0"
   }
